# coursework_3_skypro_postgresql

./: README.md  example_employeers.json  example_vacancies_by_employeers.json  main.py  pyproject.toml  requirements.txt
src/: config.py  db_manager.py  db_setup.py  hh_api.py
